# temporal-template-rs

./: README.md
crates/some_crate/: Cargo.toml
crates/temporal-template/: Cargo.toml
crates/temporal-template/src/: main.rs  temp.rs
crates/temporal_sdk_helpers/: Cargo.toml
crates/temporal_sdk_helpers/src/: lib.rs
crates/toolbox/: Cargo.toml
crates/toolbox/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
